--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-red-contrib-dwd-local-weather": "^1.0.5",
     "node-red-node-openweathermap": "^0.5.1",
     "nodemon": "^3.0.2",
-    "weather-icons": "^1.3.2"
+    "weather-icons": "^1.3.2",
+    "node-red-contrib-pick-attributes": "/Users/yyz/Documents/Projects2024/Simoco/cutom-nodes/node-red-contrib-pick-attributes"
   }
 }
