--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "node-red-node-openweathermap": "^0.5.1",
     "nodemon": "^3.0.2",
     "weather-icons": "^1.3.2",
-    "node-red-contrib-pick-attributes": "/Users/yyz/Documents/Projects2024/Simoco/cutom-nodes/node-red-contrib-pick-attributes"
+    "node-red-contrib-pick-attributes": "../cutom-nodes/node-red-contrib-pick-attributes"
   }
 }
