--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node-red -p 8080 -userDir ./data"
+    "start": "node-red -p 8080 -userDir ./data --production"
   },
   "author": "Simon Yuan",
   "license": "ISC",
