--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@flexdash/node-red-fd-corewidgets": "^0.4.64",
     "node-red": "^3.1.3",
     "node-red-contrib-dwd-local-weather": "^1.0.5",
+    "node-red-contrib-pick-attributes": "/Users/yyz/Documents/Projects2024/Simoco/cutom-nodes/node-red-contrib-pick-attributes",
+    "node-red-dashboard": "^3.6.5",
     "node-red-node-openweathermap": "^0.5.1",
     "nodemon": "^3.0.2",
-    "weather-icons": "^1.3.2",
-    "node-red-contrib-pick-attributes": "/Users/yyz/Documents/Projects2024/Simoco/cutom-nodes/node-red-contrib-pick-attributes"
+    "weather-icons": "^1.3.2"
   }
 }
