--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@flexdash/node-red-fd-corewidgets": "^0.4.64",
     "node-red": "^3.1.3",
     "node-red-contrib-dwd-local-weather": "^1.0.5",
-    "node-red-contrib-pick-attributes": "/Users/yyz/Documents/Projects2024/Simoco/cutom-nodes/node-red-contrib-pick-attributes",
+    "node-red-contrib-pick-attributes": "./src/cutom-nodes/node-red-contrib-pick-attributes",
     "node-red-dashboard": "^3.6.5",
     "node-red-node-openweathermap": "^0.5.1",
     "nodemon": "^3.0.2",
